fix: z-index da navbar

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -7,6 +7,7 @@ nav {
     display: flex;
     align-items: center;
     height: 70px;
+    z-index: 2;
 
     .navbar {
         display: flex;
