--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@ nav {
   display: flex;
   align-items: center;
   height: 70px;
+  z-index: 2;
 }
 nav .navbar {
   display: flex;
